# langchain-agentmail

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: quickstart.md
examples/: send_one_email.py  triage_agent.py  webhook_server.py
langchain_agentmail/: __init__.py  _version.py  client.py  loaders.py  retrievers.py  toolkit.py
langchain_agentmail/tools/: __init__.py  attachments.py  base.py  drafts.py  inboxes.py  messages.py  schemas.py  threads.py
langchain_agentmail/webhooks/: __init__.py  events.py  fastapi.py  verify.py
tests/: test_tools.py
tests/unit_tests/: test_async.py  test_attachments.py  test_drafts.py  test_loader_retriever.py  test_tools.py  test_webhooks.py
