[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-agentmail"
version = "0.1.1"
description = "LangChain integration for AgentMail — give your agents a real inbox."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Joseph Feleke", email = "josephfeleke7@gmail.com" }]
keywords = ["langchain", "agentmail", "email", "agents", "llm", "tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain-core>=0.3.0",
    "agentmail>=0.0.30",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3", "ruff>=0.4"]
examples = ["langchain>=0.3.0", "langchain-openai>=0.2.0", "langgraph>=0.2.0"]

[project.urls]
Homepage = "https://www.agentmail.to/"
Source = "https://github.com/josephfeleke/langchain-agentmail"

[tool.setuptools.packages.find]
include = ["langchain_agentmail*"]

[tool.setuptools.package-data]
langchain_agentmail = ["py.typed"]
