[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-agentmail"
dynamic = ["version"]
description = "LangChain integration for AgentMail — give your agents a real inbox."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Joseph Feleke", email = "josephfeleke7@gmail.com" }]
keywords = ["langchain", "agentmail", "email", "agents", "llm", "tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain-core>=0.3.0",
    "agentmail>=0.0.30",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3",
    "ruff>=0.6",
    "mypy>=1.10",
]
examples = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
]
webhooks = [
    "fastapi>=0.110",
]

[project.urls]
Homepage = "https://www.agentmail.to/"
Source = "https://github.com/josephfeleke/langchain-agentmail"

[tool.hatch.version]
path = "langchain_agentmail/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["langchain_agentmail"]

[tool.hatch.build.targets.sdist]
include = [
    "langchain_agentmail",
    "tests",
    "examples",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit_tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line-length handled by formatter
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "agentmail.*"
ignore_missing_imports = true
